# [[file:gosh-shell.note::e345323a][e345323a]]
[package]
name = "gosh-repl"
version = "0.1.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "A REPL framework for gosh project "
license = "GPL-3.0"
homepage = "https://github.com/gosh-rs/gosh-repl"
repository = "https://github.com/gosh-rs/gosh-repl"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
gut = { version = "0.4", package = "gchemol-gut" }
# reedline = "0.19.0"
rustyline = {version = "11", features = ["with-fuzzy"]}
rustyline-derive = "0.8"
shlex = "1"

# workspace independent
# [workspace]

[features]
# for adhoc hacking
adhoc = []
# e345323a ends here
